# antifraud-deepfake-detection

./: .cursorignore  .cursorindexingignore  .gitignore  AGENTS.md  main.py  pyproject.toml
v2/: .env.example  .gitignore  AGENTS.md  config.py  pyproject.toml
v2/data/docs/: draft_conclusion.md
v2/data/prompts/: README.md  advance_fee_scam_email.json  fraud_sms_deceptive.json  legitimate_email.json  legitimate_sms.json  phishing_email.json
v2/docs/: CHANGELOG.md  README.md  baseline_summary.md  core_as_built.md  core_dataset_description.md  core_split_diagnostics.md  dataset_contract.md  dataset_design_final.md  hc60_feature_spec.md  llm_prompt_families_contract.md  next_tasks.md  nis_report.md  project_overview.md  project_status.md  raw_sources_inventory.md  thesis_constraints.md
v2/docs/archive/: README.md  dataset_design_v0.md  dataset_design_v1.md  dataset_design_v2.md
v2/notebooks/01_data_sources/: 01_explore_sources.ipynb  02_smishtank_eda.ipynb
v2/notebooks/02_dataset_design/: 01_sms_spam_annotation.ipynb  02_enron_sa_structure_exploration.ipynb  03_block_a_b_iterative_annotation.ipynb  03_spamassassin_spam_annotation.ipynb  04_enron_spam_annotation.ipynb  05_enron_419_annotation.ipynb  06_enron_ham_annotation.ipynb  07_spamassassin_ham_annotation.ipynb  08_sms_ham_annotation.ipynb  09_nazario_structure_annotation.ipynb  10_mendeley_smishing_subtype_annotation.ipynb  11_nigerian_fraud_419_subtype_annotation.ipynb  _ann_common.py
v2/notebooks/03_dataset_creation/: 00_length_bin_analysis.ipynb  09_pilot_generation.ipynb  10_pilot_human_matching.ipynb  11_mass_generation_openai.ipynb  12_mass_generation_mistral.ipynb  13_mass_generation_claude_openrouter.ipynb  14_enron_ham_prepare.ipynb  15_spamassassin_ham_prepare.ipynb  16_sms_ham_prepare.ipynb  17_dataset1_human_assembly.ipynb  18_dataset2_llm_assembly.ipynb  19_core_train_val_test_assembly.ipynb  20_core_test_claude_binary.ipynb  hc3_finance_prepare.ipynb  mendeley_smishing_prepare.ipynb  nazario_prepare.ipynb  nigerian_fraud_prepare.ipynb  smishtank_prepare.ipynb
v2/notebooks/04_features/: 01_core_feature_extraction_and_eda.ipynb  01_core_handcrafted_features_v2.ipynb  02_core_feature_analysis_and_shap.ipynb  _write_notebook.py
v2/notebooks/05_classical_ml/: 01_core_classical_baselines.ipynb  01_core_hc60_baselines.ipynb  _gen_baseline_nb.py
v2/outputs/tables/: block_ab_annotation_long.csv  block_ab_crosstab_stream_category.csv  core_crosstab_channel__split.csv  core_crosstab_channel__split__label.csv  core_crosstab_fraudness__split__label.csv  core_crosstab_generator_lane__scenario_family__split.csv  core_crosstab_generator_lane__split.csv  core_crosstab_label__split.csv  core_crosstab_length_bin__scenario_family__split.csv  core_crosstab_length_bin__split.csv  core_crosstab_origin_model__scenario_family__split.csv  core_crosstab_scenario_family__core_eval_slice__label.csv  core_crosstab_scenario_family__label.csv  core_crosstab_scenario_family__split.csv  core_crosstab_scenario_family__split__label.csv  core_crosstab_source_family__scenario_family__split.csv  core_crosstab_test_claude_binary__channel__label.csv  core_crosstab_test_claude_binary__fraudness__label.csv  core_crosstab_test_claude_binary__length_bin__label.csv  core_crosstab_test_claude_binary__match_tier__label.csv  core_crosstab_test_claude_binary__scenario_family__channel__label.csv  core_crosstab_test_claude_binary__scenario_family__label.csv  core_crosstab_test_claude_binary__source_family__scenario_family__label.csv  core_crosstab_test_claude_binary__time_band__scenario_family__label.csv  core_crosstab_time_band__scenario_family__split.csv  dataset1_human_assembly_summary.csv  dataset1_human_counts_by_channel_fraudness.csv  dataset1_human_counts_by_channel_length_bin.csv  dataset2_llm_assembly_summary.csv  (+23 more)
v2/src/: __init__.py  core_hc60_features.py  core_legacy_hc_features.py  core_test_claude_binary.py  hc60_baseline_suite.py  llm_mass_generation.py
(+72 files in other folders)
