[project]
name = "antifraud-deepfake-detection-v2"
version = "0.1.0"
description = "Dataset rebuild v2 — Detection of Textual Deepfake Attacks in Anti-Fraud Systems"
requires-python = ">=3.11"
authors = [{ name = "Askar Danyarov" }]

dependencies = [
    # ── Data & I/O ──────────────────────────────────────────────
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=16.0.0",
    # ── NLP & Text Processing ───────────────────────────────────
    "nltk>=3.9.0",
    "tiktoken>=0.7.0",
    "langdetect>=1.0.9",
    "textstat>=0.7.4",
    "clean-text>=0.6.0",
    # ── Classic ML ──────────────────────────────────────────────
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "shap>=0.42.0,<0.50.0",
    # ── HuggingFace datasets (for HC3, Yelp download) ───────────
    "datasets>=2.20.0",
    "huggingface-hub>=0.24.0",
    # ── LLM APIs (data generation, later stage) ─────────────────
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "httpx>=0.27.0",
    # ── Visualization ───────────────────────────────────────────
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    # ── Utilities ───────────────────────────────────────────────
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.2",
    "tenacity>=9.0.0",
    "joblib>=1.5.3",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
lm_scoring = [
    "torch>=2.3.0",
    "transformers>=4.44.0",
]
dev = [
    "ruff>=0.5.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.1.0",
    "ipywidgets>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
